Changes since version 3.0.1
---------------------------

- Fixed a bug in slice2cpp that caused a compiler warning about
  an unused parameter in the generated code for operations on
  classes with void return type, no parameters, and no exception
  specification.

- Fixed a bug in IceGrid deployment mechanism which would prevent
  defining with a variable object identities with a category.

- Added Glacier2::Router::getCategoryForClient that should be used to
  get the category for use in Glacier2 client callback objects. This
  should be used instead of getServerProxy()->ice_getIdentity().category.

- The Glacier2 router now forwards the context set by the client when calling
  PermissionsVerifier::checkPermissions and SessionManager::create.

- Fixed a bug in IceBox and IceGrid which would prevent running IceBox
  servers from a directory containing white spaces.

- Fixed a bug in the class garbage collector that could result in
  double deallocation of class instances.

Changes since version 3.0.0
---------------------------

- Fixed an assert that could occur during connection establishment if
  the communicator was shutdown or destroyed concurrently.

- IceUtil::Time::toString() has been deprecated and should no longer
  be used. Instead, use IceUtil::Time::toDateTime() to get a date
  and time string. (toString() will continue to work as a synonym for
  two more releases and will then be removed.)

  IceUtil::Time::toDuration() is a new function that returns a
  duration string of the form "days hh:mm:ss.usec". (The number of
  days and micro seconds is printed only if they are non-zero.)

- Fixed a bug in the Slice parser that caused problems if an included
  file contained white space in the file name.

- Fixed a bug where the IceGrid node would fail to retrieve the CPU
  utilization on localized Windows versions.

- The Glacier2 router now logs a warning if a request arrives on an
  unknown connection if Glacier2.Client.Trace.Reject >= 1.
